GNOME Bugzilla – Bug 408520
Incorrect equation using the exponential fit
Last modified: 2007-03-31 06:24:06 UTC
Please describe the problem: The equation that the exponential fit shows is incorrect. The amount of data used was 18000 and 20000 lines. (if it's a question of too much data) Steps to reproduce: 1. Take some data and plot it (x,y) 2. Add an exponential curve 3. add the equation, it will be different from a 1.6.X version, and incorrect Actual results: it will display an incorrect equation Expected results: it will display a correct equation Does this happen every time? Yes Other information:
Can you provide a test file, please?
Created attachment 82676 [details] Test file This is the file that opens fine in 1.6.3, but no luck in 1.7.0(ubuntu) or 1.7.6 (self compiled)
OK, seen the problem. Should be easy to fix.
Apologies, this should never have happened. Fixed in svn HEAD.
*** Bug 424684 has been marked as a duplicate of this bug. ***