http://bugzilla.gnome.org/show_bug.cgi?id=408520 fix equation.

2007-02-16  Jean Brefort  <jean.brefort@normalesup.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=408520
	* plugins/reg_linear/gog-exp-reg.c:
	(gog_exp_reg_curve_get_equation): fix equation.


svn path=/trunk/; revision=1667